--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/png" sizes="32x32" href="$assets/favicon-32x32.png">
+    <meta name="description" content="A link sharing app">
     <title>Devlinks - Link-sharing app</title>
   </head>
   <body>
